--- a/templates/purchases/buy-btn-form.html
+++ b/templates/purchases/buy-btn-form.html
@@ -1,6 +1,9 @@
 {% if product %}
-<form method="POST" action="{% url 'pedidos_stripe:start' %}"> {% csrf_token %}
-    <input type="hidden" value="{{ product.handle }}" name="handle" />
+    {% if object.user != request.user %}
+      {% if object.supply != 0 %}
+  <form action="{% url 'carro:agregar' object.id %}" method="POST">
+    {% csrf_token %}
+      <input type="hidden" name="product_id" value="{{ object.id }}">
     <div class="flex items-baseline text-gray-900 dark:text-white">
         <span class="text-3xl font-semibold">$</span>
         <span class="text-5xl font-extrabold tracking-tight">{{ product.display_price }}</span>
@@ -13,7 +16,11 @@
     </div>
     {% endif %}
     {% if request.user != product.user %}
-    <button type="submit" class="focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">Buy Now</button>
+    <button type="submit" class="focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900">Agregar al carro</button>
     {% endif %}
 </form>
 {% endif %}
+      {% endif %}
+  {% endif %}
+
+
