--- a/templates/products/list-card.html
+++ b/templates/products/list-card.html
@@ -15,7 +15,7 @@
     </h3>
     <span class="text-3xl font-bold text-gray-900 dark:text-white">${{ object.price }}</span>
     <span class="text-gray-500 dark:text-gray-400">{{ object.handle }}</span>
-    <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">{{ object.description }}</p>
+{#    <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">{{ object.description }}</p>#}
     <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">Disponibles: {{ object.supply }}</p>
   {% if object.user != request.user %}
       {% if object.supply != 0 %}
