--- a/templates/usuario/create.html
+++ b/templates/usuario/create.html
@@ -1,29 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex flex-col items-center justify-center px-6 mx-auto md:h-screen lg:py-0">
-  <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-    <h1 class="text-2xl font-bold mb-6 text-gray-800">Crear Cuenta</h1>
-    <form method="post" action="{% url 'usuario:create' %}" class="space-y-4 md:space-y-6">
+<div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
+  <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-20 w-full max-w-md">
+    <h1 class="text-3xl font-bold text-center text-gray-700 mb-4">Crear Cuenta</h1>
+
+    <form method="post" action="{% url 'usuario:create' %}" class="space-y-6">
       {% csrf_token %}
       {% for field in form %}
-      <div>
-        <label for="{{ field.id_for_label }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
-          {{ field.label }}
-        </label>
-        <div class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-          {{ field }}
+      <div class="relative">
+        <label for="{{ field.id_for_label }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">{{ field.label }}</label>
+        <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" id="{{ field.id_for_label }}" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" {% if field.field.widget.is_hidden %}hidden{% endif %} />
+        <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
+          <svg class="w-4 h-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4.875a.625.625 0 01.625.625v11.25a.625.625 0 01-1.25 0V5.5a.625.625 0 01.625-.625zM18 12h.008v.008H18V12zM9 12h.008v.008H9V12z" /></svg>
         </div>
         {% if field.errors %}
         <p class="text-red-500 text-xs italic">{{ field.errors.0 }}</p>
         {% endif %}
       </div>
       {% endfor %}
-      <div class="flex items-center justify-between">
-        <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-          Crear Cuenta
-        </button>
-      </div>
+
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        Crear Cuenta
+      </button>
     </form>
   </div>
 </div>
