--- a/templates/usuario/login.html
+++ b/templates/usuario/login.html
@@ -1,56 +1,50 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
+  <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-20 w-full max-w-md">
+    <h1 class="text-3xl font-bold text-center text-gray-700 mb-4">Iniciar sesión</h1>
 
-
-
-<div class="flex flex-col items-center justify-center px-6 mx-auto md:h-screen lg:py-0">
-    <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-        <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-            <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                Iniciar sesión
-            </h1>
-            <form class="space-y-4 md:space-y-6" action="{% url 'usuario:login' %}" method="post">
-                {% csrf_token %}
-                {% for field in formulario %}
-                <div>
-                    <label for="{{ field.id_for_label }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ field.label }}</label>
-                    {{ field }}
-                </div>
-                {% endfor %}
-                <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                    Iniciar sesión
-                </button>
-              {% if messages %}
-<div class="space-y-4 mt-4">
-    {% for message in messages %}
-    <div id="message-{{ forloop.counter }}" class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-md shadow-md relative" role="alert">
-        <strong class="font-bold">¡Atención!</strong>
-        <span class="block sm:inline">{{ message }}</span>
-        <span class="absolute top-0 bottom-0 right-0 px-4 py-3 cursor-pointer" onclick="closeMessage('message-{{ forloop.counter }}')">
-            <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                <title>Cerrar</title>
-                <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
-            </svg>
-        </span>
-    </div>
-    {% endfor %}
-</div>
-
-<script>
-    function closeMessage(id) {
-        var message = document.getElementById(id);
-        message.style.display = 'none';
-    }
-</script>
-{% endif %}
-                <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                    ¿No tienes una cuenta? <a href="{% url 'usuario:create' %}" class="font-medium text-blue-600 hover:underline dark:text-blue-500">Regístrate</a>
-                </p>
-            </form>
+    <form class="space-y-6" action="{% url 'usuario:login' %}" method="post">
+      {% csrf_token %}
+      {% for field in formulario %}
+      <div class="relative">
+        <label for="{{ field.id_for_label }}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400">{{ field.label }}</label>
+        <input type="{{ field.field.widget.input_type }}" name="{{ field.name }}" id="{{ field.id_for_label }}" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" {% if field.field.widget.is_hidden %}hidden{% endif %} />
+        <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
+          <svg class="w-4 h-4 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4.875a.625.625 0 01.625.625v11.25a.625.625 0 01-1.25 0V5.5a.625.625 0 01.625-.625zM18 12h.008v.008H18V12zM9 12h.008v.008H9V12z" /></svg>
         </div>
-    </div>
+      </div>
+      {% endfor %}
+
+      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+        Iniciar sesión
+      </button>
+
+      {% if messages %}
+      <div class="mt-4">
+        {% for message in messages %}
+        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+          <strong class="font-bold">¡Atención!</strong>
+          <span class="block sm:inline">{{ message }}</span>
+          <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+            <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <title>Cerrar</title>
+              <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+            </svg>
+          </span>
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+
+      <p class="text-center text-gray-500 mt-4">
+        ¿No tienes una cuenta? <a href="{% url 'usuario:create' %}" class="font-medium text-blue-500 hover:underline">Regístrate</a>
+      </p>
+      <p class="text-center text-gray-500 mt-4">
+        <a href="{% url 'password_reset' %}" class="font-medium text-blue-500 hover:underline">¿Olvidaste tu contraseña?</a>
+      </p>
+    </form>
+  </div>
 </div>
 {% endblock %}
-
-
