--- a/templates/products/manager.html
+++ b/templates/products/manager.html
@@ -2,15 +2,14 @@
 
 
 {% block content %}
-{% if form.errors %}
-    <ul>
-    {% for field in form %}
-        {% for error in field.errors %}
-            <li>{{ field.label }}: {{ error }}</li>
-        {% endfor %}
-    {% endfor %}
-    </ul>
-{% endif %}
+
+
+ {% if conexion_error %}
+   <div class="alert" role="alert">
+       <strong style="font-weight: bold;">¡Atención!</strong>
+       <span>{{ conexion_error }}</span>
+   </div>
+   {% endif %}
 
 <form class='space-y-5' method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
